tests/expectations/compiler/function/non_transition_variant_input_record_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:9:18
     |
   9 |     function foo(a: credits) -> u8 {
     |                  ^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:9:18
     |
   9 |     function foo(a: credits) -> u8 {
     |                  ^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:13:41
     |
  13 |     function boo(a: address, b: u64) -> credits {
     |                                         ^^^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:13:41
     |
  13 |     function boo(a: address, b: u64) -> credits {
     |                                         ^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {
     | ^^^^^^^^^^^^
"""]
